# Plume

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml
assets/style/: plume-style.css
libs/icalendarlib/: icalendar.cpp
src/: main.cpp  plume.cpp  plume.h  plume.qrc
src/widgets/bar/: barbutton.cpp  barbutton.h  bottombar.cpp  bottombar.h  button.cpp  button.h
src/widgets/calendar/: addcalendarpage.cpp  addcalendarpage.h  backbutton.cpp  backbutton.h  button.cpp  button.h  calendar.cpp  calendar.h  config.cpp  config.h  enablebutton.cpp  enablebutton.h  event.cpp  event.h  eventpage.cpp  eventpage.h  headerbutton.cpp  headerbutton.h  settings.cpp  settings.h  settingsbutton.cpp  settingsbutton.h  typedefs.h
src/widgets/common/: button.cpp  button.h
src/widgets/home/: home.cpp  home.h
src/widgets/mail/: api.h  config.cpp  config.h  login.cpp  login.h  mail.cpp  mail.h  mailpreview.cpp  mailpreview.h
